# wkt_visualizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
data/: com.github.wkt_visualizer.desktop
tests/: test_canvas.py  test_filter.py
wkt_visualizer/: __main__.py  app.py  canvas.py  filter.py  install_desktop.py  model.py  palette.py  panels.py  properties.py
wkt_visualizer/templates/: com.github.wkt_visualizer.desktop
